[package]
name = "repo-birthday"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.98"
async-recursion = "1.1.1"
chrono = "0.4.41"
icalendar = "0.16.13"
lazy_static = "1.5.0"
liquid = "0.26.11"
magic-crypt = "4.0.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.30.0", features = ["macros", "rt-multi-thread"] }
